[gd_scene load_steps=2 format=3 uid="uid://dtxlrkxsixvdt"]

[ext_resource type="Script" uid="uid://dg6qvcgytdk50" path="res://proto/proto_generator.gd" id="1_ao4mu"]

[node name="ProtoGenerator" type="Control" node_paths=PackedStringArray("label", "button", "timer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ao4mu")
label = NodePath("Label")
button = NodePath("Button")
timer = NodePath("Timer")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(64, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -20.0
offset_right = 32.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "start"

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "food: x"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
